
Version 0.3.4dev (TBA)
======================

New features:

  * Auto-pairer inserts matching characters ( -> ), " -> ", etc
  * Snippets
  
Internal changes:

  * New API for creating text Marks, to tag a position in a Document.
  * Use 32 bit JVM by default.
  
Fixes:

  * 
  
New contributors:

  * 

Version 0.3.3dev (21 Feb 2010)
==============================

New features:

  * Tab stops:
    - Can set tab width for open tab.
    - Default tab width is remembered per language.
    - Soft tabs (spaces that behave like tabs).
    - Default soft/hard option is remembered per language.
  * FindFileDialog:
     - opens with a list of files opened this session.
     - caches file list between invocations (cleared on window focus)
  * Can autocomplete with a menu popup.
  * Opens files and folders passed on the command line.
  * Reopens last open directory on startup.
  * Single instance support: redirects to currently open instance if any.
  * Added 'encryption' plugin, mainly as an example.
  * Forward search: wraps, regex option, match case option.
  * Very raw edit preferences command (Show me the YAML!)
  * Help > About command
  * Can specify HTTP_PROXY for downloading jars.
  * REPL captures and prints STDOUT
  * Can register Redcar for opening files on Windows. (See redcar -h)

Internal changes:

  * Keybindings are now stored in Keymap objects, in preparation for user preferences.
  * Speedbar now uses an EditView for textboxes.
  * Speedbars can have combos in them.
  * Speedbars have access to the properties of the widgets in them.
  * Added tab and escape key handler support to the EditView.

Fixes:

  * Fixed some highlighter bugs.
  * Search searches last line in doc.
  * Doesn't die on Windows-1252 encodings.
  * Plugin Manager UI works on Linux and Windows.
  
New contributors:

  * Mat Schaffer
  * Felipe Coury
  * Sam Clopton
  * Roger D Pack

Version 0.3.2dev (23 Jan 2010)
==============================

New features:
