@@ -18,7 +18,7 @@ module Redcar
       @registry ||= begin
         registry = Registry.new
         s = Time.now
-        tm_snippets = Textmate.all_bundles.map {|b| b.snippets}.flatten 
+        tm_snippets = Textmate.all_snippets
         puts "took #{Time.now - s}s to load snippets"
         registry.add(tm_snippets)
         registry
